fix header nav and footer nav layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body {
 }
 h1 {
   padding: 5vw 0;
+  margin: auto;
 }
 h2 {
   padding: 15vw 0;
@@ -106,6 +107,10 @@ footer a {
   color: inherit;
   background-color: white;
 }
+
+.main-nav li {
+  text-align: center;
+}
 #portfolio-section {
   background-color: white;
   padding-bottom: 8vw;
@@ -144,20 +149,29 @@ footer a {
   h1 {
     /* color: green; */
     padding-bottom: 2vw;
+    /* border: 1px solid red; */
+    text-align: center;
   }
 
   .main-nav ul {
     display: flex;
     justify-content: center;
-    font-size: 2.5vw;
+    font-size: 2vw;
+    /* border: 1px solid blue; */
   }
-
+  .flex-center {
+    flex-direction: row;
+  }
   .main-nav li {
     padding: 0 3vw;
   }
 
   .main-nav a {
     background-color: transparent;
+  }
+
+  .header-div {
+    display: block;
   }
   /* ----- HEADER AREA END -----  */
 
@@ -272,6 +286,9 @@ footer a {
   #back-to-top {
     display: none;
   }
+  #footer-nav {
+    display: block;
+  }
 }
 
 @media screen and (min-device-width: 1024px) {
@@ -327,7 +344,7 @@ footer a {
     /* display: inline; */
     font-weight: 700;
     /* flex-direction: row; */
-    justify-content: space-between;
+    justify-content: flex-end;
     margin-right: -1.5vw;
     margin-top: 1.25vw;
     /* align-items: baseline; */
@@ -356,10 +373,12 @@ footer a {
   h1 {
     padding: 0;
     font-size: 2.5vw;
+    text-align: left;
   }
   .header-div {
     width: 90vw;
     padding-top: 5vw;
+    display: flex;
   }
   .bio {
     margin: 5vw auto 5vw auto;
